# airthingrs

./: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  README.md  TODO.md  devices.toml
.github/workflows/: bin.yml  cross.yml  docker.yml
src/: config.rs  control.rs  logging.rs  main.rs  metrics.rs  sensor.rs
