[package]
name = "wavething-rust"
version = "0.1.0"
authors = ["Alexey Parfenov <alepar@gmail.com>"]
edition = "2018"

[dependencies]
# logging
chrono = "~0"
fern = "~0"
log ="~0"
# bt
btleplug = "~0"
# prometheus
prometheus = "~0"
prometheus-hyper = "~0"
# misc app
bytes = "~1"
futures ="~0"
toml = "~0"
tokio = { version = "~1", features = ["macros", "rt-multi-thread"] }
uuid = "~0"
